test/files/neg/t2775.scala
trait B[S] { type T = S; val c = new Array[T](1) }
