test/files/neg/t2775.check
t2775.scala:1: error: cannot find class tag for element type B.this.T
trait B[S] { type T = S; val c = new Array[T](1) }
                                 ^
one error found
